syntax = "proto3";

option java_package = "ru.teamsync.grpc";
option java_outer_classname = "RecommendationProto";

service ProjectsRecommendations {
  rpc FetchRecommendation (ProjectsRecommendationsRequest) returns (ProjectsRecommendationsResponse);
}

message ProjectsRecommendationsRequest {
  int32 student_id = 1;
  int32 read_start = 2;
  int32 amount = 3;
}

message ProjectsRecommendationsResponse {
  repeated ProjectScore project_scores = 1;
}

message ProjectScore {
  int32 project_id = 1;
  float score = 2;
}
